PROJECT(luacrypto C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Lua51 REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)

ADD_LIBRARY(crypto MODULE src/lcrypto.c)
SET_TARGET_PROPERTIES(crypto PROPERTIES PREFIX "")

OPTION(EXTERNAL_INITIALIZATION "Do not call OpenSSL_add_all_*_() in luaopen_crypto(), assume external OpenSSL initialization" OFF)
IF(EXTERNAL_INITIALIZATION)
    ADD_DEFINITIONS(-DOPENSSL_EXTERNAL_INITIALIZATION)
ENDIF()

INCLUDE_DIRECTORIES(crypto ${LUA_INCLUDE_DIR})
INCLUDE_DIRECTORIES(crypto ${OPENSSL_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(crypto ${LUA_LIBRARY})
TARGET_LINK_LIBRARIES(crypto ${OPENSSL_LIBRARIES})
